--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 
 
     </section>
+
+
+    <section class="saved-memes-container">
+
+
+    </section>
+
     <section class="editor-container">
     <div>
         <input type="text" class="input-text" placeholder="Enter your text here" onkeydown="onSetLineText(this,event)">
@@ -45,7 +52,6 @@
     <script src="js/services/meme.service.js"></script>
     <script src="js/gallery.controller.js"></script>
     <script src="js/meme.controller.js"></script>
-    <script src="js/main.js"></script>
 </body>
 
 </html>
