--- a/index.html
+++ b/index.html
@@ -26,17 +26,25 @@
         </div>
     </header>
     <section class="search-bar">
-        <input type="text" list="search-keyword" class="search-meme" oninput="onSetFilterBy(this.value)" placeholder="search your meme here">
+        <input list="search-keyword" class="search-meme" oninput="onSetFilterBy(this.value)" placeholder=" search your meme here">
         <datalist id="search-keyword">
-            <option value="obama"onclick="onSetFilterBy('obama')"></option>
+            <option value="obama"></option>
+            <option value="trump"></option>
+            <option value="donald"></option>
             <option value="putin"></option>
+            <option value="russia"></option>
             <option value="matrix"></option>
             <option value="baby"></option>
             <option value="funny"></option>
             <option value="dog"></option>
             <option value="cat"></option>
             <option value="laptop"></option>
-            <option value="borimor"></option>
+            <option value="boromir"></option>
+            <option value="star trek"></option>
+            <option value="toy story"></option>
+            <option value="clown"></option>
+            <option value="evil"></option>
+            <option value="naughty"></option>
         </datalist>
     </section>
 
