add keywords search

--- a/index.html
+++ b/index.html
@@ -56,13 +56,23 @@
             <option value="TV"></option>
             <option value="Win"></option>
         </datalist>
+        <span class="keywords-map">
+            <button class="keyword-click" onclick="onSetFilterBy('obama')">obama</button>
+            <button class="keyword-click" onclick="onSetFilterBy('funny')">funny</button>
+            <button class="keyword-click" onclick="onSetFilterBy('cat')">cat</button>
+            <button class="keyword-click" onclick="onSetFilterBy('baby')">baby</button>
+        </span>
     </section>
+
     <button class="random-meme-container" onclick="onRandomMeme()">I'm flexible</button>
+
     <!-- gallery -->
+
     <section class="gallery-container"></section>
 
 
     <section class="saved-memes-container"></section>
+
 
     <!-- meme editor and canvas -->
     <section class="editor-container" hidden>
