share on facebook

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         <div>
         <button class="editor-btn" onclick="onSaveMeme()">Save meme &#x1F4BE;</button>
         <button class="editor-btn"><a href="#" onclick="onDownloadMeme(this)" download="download-img.jpg">Download <i class="fa fa-download"></i></a></button>
+            <button class="editor-btn" onclick="onShareMeme()">Share on Facebook <a href="#" class="fa fa-facebook"></a></button>
         </div>
     </section>
 
