add hover effect

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
             <button class="editor-btn" onclick="onAddLine()">New line</button>
             <button class="editor-btn" onclick="onDeleteLine()">Delete line</button>
             <button class="editor-btn" onclick="onSwitchLines()">Switch line</button>
+            <button class="editor-btn" onclick="onIncreaseTxtSize()">A +</button>
+            <button class="editor-btn" onclick="onDecreaseTxtSize()">A -</button>
         </div>
         <canvas id="my-canvas" height="450" width="450" crossorigin="anonymous"></canvas>
         <div>
